# ubs-engine

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .lcovrc  .pre-commit-config.yaml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  README.en.md  README.md  README_EN.md  REALEASE-NOTES.md  build.sh  config.h.in  go.mod  iwyu.imp  opencode.json  register_xalarm.h.in  setup.py  ubs-engine.spec  vm_ut_coverage.sh
example/: CMakeLists.txt  fd_demo.c  numa_demo.c  最佳实践：如何使用UBS Engine API.md
example/c/: CMakeLists.txt  README.md  README_EN.md  fd_demo.c  numa_demo.c  ubse_mem_fault_common.c  ubse_mem_fault_common.h  ubse_mem_fd_example.c  ubse_mem_numa_example.c  ubse_mem_share_example.c  ubse_node_example.c
example/go/: README.md  README_EN.md  example.go  go.mod
example/python/: README.md  README_EN.md
src/: CMakeLists.txt  ubse_main.cpp
src/adapter_plugins/: CMakeLists.txt
src/adapter_plugins/bandbridge/: CMakeLists.txt  LICENSE  Makefile  README.md  bandbridge_ctrlq.c  bandbridge_ctrlq.h  bandbridge_device.c  bandbridge_device.h  bandbridge_log.c  bandbridge_log.h  bandbridge_main.c  bandbridge_main.h  bandbridge_sample.c
src/adapter_plugins/mmi/: CMakeLists.txt  ubse_mem_common_utils.cpp  ubse_mem_common_utils.h  ubse_mem_instance_inner.cpp  ubse_mem_instance_inner.h  ubse_mem_obj_restore.cpp  ubse_mem_obj_restore.h  ubse_mem_types.h  ubse_mmi_def.cpp  ubse_mmi_interface.cpp  ubse_mmi_interface_impl.cpp  ubse_mmi_interface_impl.h  ubse_mmi_module.cpp  ubse_mmi_module.h  ubse_mmi_timeout_manager.cpp  ubse_mmi_timeout_manager.h  ubse_obmm_executor.cpp  ubse_obmm_executor.h  ubse_obmm_meta_restore.cpp  ubse_obmm_meta_restore.h  ubse_obmm_utils.cpp  ubse_obmm_utils.h
src/adapter_plugins/mti/: CMakeLists.txt  ubse_lcne_module.cpp  ubse_lcne_module.h  ubse_lcne_topology.cpp  ubse_lcne_topology.h  ubse_mti_1825.cpp  ubse_mti_bus_instance.cpp  ubse_mti_bus_instance_default_impl.cpp  ubse_mti_bus_instance_default_impl.h  ubse_mti_def.cpp  ubse_mti_eid_interface.cpp  ubse_mti_eid_internal.h  ubse_mti_eid_util.cpp  ubse_mti_interface.cpp  ubse_mti_interface_default.cpp  ubse_mti_interface_default.h  ubse_mti_urma.cpp  ubse_mti_urma_default_impl.cpp  ubse_mti_urma_default_impl.h  ubse_topology_interface.cpp
src/adapter_plugins/smbios/: CMakeLists.txt  ubse_smbios.cpp  ubse_smbios.h  ubse_smbios_def.cpp  ubse_smbios_def.h  ubse_smbios_default_interface.cpp  ubse_smbios_default_interface.h  ubse_smbios_impl.h
src/adapter_plugins/ssu/: CMakeLists.txt  ubse_ssu_adapter.cpp  ubse_ssu_adapter_impl.cpp  ubse_ssu_adapter_impl.h
src/adapter_plugins/syssentry/: sentry_observer.cpp  sentry_observer.h  sys_sentry_module.cpp  sys_sentry_module.h
src/adapter_plugins/ubturbo/: CMakeLists.txt  ubse_ubturbo_module.cpp  ubse_ubturbo_module.h
src/adapter_plugins/urma_uvs/: CMakeLists.txt  ubse_urma_topo_config.cpp  ubse_urma_topo_config.h  ubse_urma_uvs.cpp  ubse_urma_uvs_module.cpp  ubse_urma_uvs_module.h
src/addons/: CMakeLists.txt
src/addons/process_mem/: CMakeLists.txt  process_mem_pid_bridge.cpp  process_mem_pid_bridge.h  process_mem_pid_collect.cpp  process_mem_pid_collect.h  process_mem_pid_config_manager.cpp  process_mem_pid_config_manager.h  process_mem_pid_info_manager.cpp  process_mem_pid_info_manager.h  process_mem_pid_manager_def.h  process_mem_plugin.cpp  process_mem_plugin.h
src/addons/rmrs/: CMakeLists.txt  (+2 more)
src/api_server/: CMakeLists.txt  ubse_api_server.cpp  ubse_api_server_auth_manager.cpp  ubse_api_server_auth_manager.h  ubse_api_server_module.cpp  ubse_api_server_module.h  ubse_api_server_object_manager.cpp  ubse_api_server_object_manager.h
src/cli/: CMakeLists.txt  ubse_cli_buffer_guard.cpp  ubse_cli_buffer_guard.h  ubse_cli_cert_cmd_reg.cpp  ubse_cli_cert_cmd_reg.h  ubse_cli_main.cpp  ubse_cli_mem_cmd_reg.cpp  ubse_cli_mem_cmd_reg.h  ubse_cli_node_cmd_reg.cpp  ubse_cli_node_cmd_reg.h  ubse_cli_reg.cpp  ubse_cli_reg.h  ubse_cli_urma_cmd_reg.cpp  ubse_cli_urma_cmd_reg.h
src/cmd/: main.go
src/controllers/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/include/: common.h  trace_context.h  ubse_api_server.h  ubse_api_server_def.h  ubse_base_message.h  ubse_com.h  ubse_com_op_code.h  ubse_common_def.h  ubse_conf_error.h  ubse_const_def.h  ubse_def.h  ubse_election.h  ubse_error.h  ubse_event.h  ubse_event_module.h  ubse_logger.h  ubse_logger_audit.h  ubse_logger_inner.h  ubse_logger_module.h  ubse_mem_controller.h  ubse_mem_controller_module.h  ubse_mem_mami_def.h  ubse_mem_obj.h  ubse_mem_obmm_def.h  ubse_memory_interface.h  ubse_module.h  ubse_node.h  ubse_node_controller.h  ubse_node_discovery.h  ubse_node_discovery_def.h  ubse_node_mgr.h  ubse_node_mgr_def.h  ubse_node_module.h  ubse_ras.h  ubse_ras_module.h  ubse_security.h  ubse_service_registry.h  ubse_storage.h  ubse_thread_pool.h  ubse_thread_pool_module.h  (+4 more)
src/message/: CMakeLists.txt  README.md  README_EN.md  ubse_base_message.cpp
src/node/: CMakeLists.txt  README.md  ubse_node_module.cpp
src/ras/: CMakeLists.txt  ubse_ras.cpp  ubse_ras_com_handler.cpp  ubse_ras_com_handler.h  ubse_ras_error.h  ubse_ras_handler.cpp  ubse_ras_handler.h  ubse_ras_module.cpp  ubse_ras_oom_handler.cpp  ubse_ras_oom_handler.h
src/res_plugins/: CMakeLists.txt
src/sdk/: CMakeLists.txt  libubse_helper.c  libubse_helper.h  ubs_engine.c  ubs_engine_mem.c  ubs_engine_topo.c  ubs_engine_urma.c  ubs_error.c  ubse_error_info.h
test/FUZZ/: CMakeLists.txt  main.cpp  main_test_fuzz.cpp  main_test_fuzz.h  ubse_fuzz_dir.h.in
test/IT/: CMakeLists.txt  IT_P0_CATALOG.md  README.md  com_it.cpp  com_it.h  dbg_deadloop_it.cpp  dbg_deadloop_it.h  dbg_exception_it.cpp  dbg_exception_it.h  main.cpp  main_test_it.cpp  main_test_it.h  plugin_it.cpp  plugin_it.h  suite_test_it_init.cpp  suite_test_it_init.h  test_it_utils.cpp  test_it_utils.h  ubse_it_dir.h.in
test/PT/: CMakeLists.txt  main.cpp  main_test_pt.cpp  main_test_pt.h  suite_test_pt_init.cpp  suite_test_pt_init.h  test_pt_utils.cpp  ubes_pt_dir.h.in
test/UT/: CMakeLists.txt  README.md  main.cpp  ubse_ut_dir.h.in
(+2752 files in other folders)
