# 按依赖顺序添加，被依赖的库写在前面
add_subdirectory(xml)
add_subdirectory(timer)
add_subdirectory(misc)
add_subdirectory(context)
add_subdirectory(log)
add_subdirectory(security)
add_subdirectory(config)
add_subdirectory(thread_pool)
add_subdirectory(event)
add_subdirectory(com)
add_subdirectory(ha)
add_subdirectory(plugin_mgr)
add_subdirectory(ipc)
add_subdirectory(http)
add_subdirectory(serde)
add_subdirectory(trace_context)
add_subdirectory(storage)
add_subdirectory(vscok)
add_subdirectory(cert)
add_subdirectory(node_mgr)